# flobotAnnotator

./: README.md  annotation_manager.py  annotations_carugate_2.yaml  annotations_full.yaml  annotator_main.py  stack21658676.yaml  tf_manager.py  yaml_test.py
annotations/: annotations_carugate.yaml  annotations_lyon.yaml  annotations_minimal.yaml
dirt_detection/: CMakeLists.txt  main.cpp  visual_dirt_detection.cpp  visual_dirt_detection.h
evaluation/: combine_data_sets.py  combine_plot.py  evaluate.py
evaluation/results/: acin_hallway_cardboard_count_false_neg.npy  acin_hallway_cardboard_count_false_pos.npy  acin_hallway_cardboard_count_true_neg.npy  acin_hallway_cardboard_count_true_pos.npy  acin_hallway_cigarettes_count_false_neg.npy  acin_hallway_cigarettes_count_false_pos.npy  acin_hallway_cigarettes_count_true_neg.npy  acin_hallway_cigarettes_count_true_pos.npy  acin_hallway_clean_count_false_pos.npy  acin_hallway_clean_count_true_neg.npy  acin_hallway_liquids_count_false_neg.npy  acin_hallway_liquids_count_false_pos.npy  acin_hallway_liquids_count_true_neg.npy  acin_hallway_liquids_count_true_pos.npy  acin_my_office_cardboard_count_false_neg.npy  acin_my_office_cardboard_count_false_pos.npy  acin_my_office_cardboard_count_true_neg.npy  acin_my_office_cardboard_count_true_pos.npy  acin_my_office_cigarettes_count_false_neg.npy  acin_my_office_cigarettes_count_false_pos.npy  acin_my_office_cigarettes_count_true_neg.npy  (+17 more)
plane_seg_cpp/: CMakeLists.txt  main.cpp  plane_segmentation.h  plane_segmentation_algorithm.cpp  plane_segmentation_input.cpp
